# clox

./: .gitignore  CLAUDE.md  CMakeLists.txt  test.lox
src/: chunk.c  chunk.h  common.h  debug.c  debug.h  main.c  memory.c  memory.h  value.c  value.h
src/vm/: compiler.c  compiler.h  scanner.c  scanner.h  vm.c  vm.h
